--- a/styles/style.css
+++ b/styles/style.css
@@ -87,7 +87,7 @@ content {
 p {
     margin: var(--gutter);
 }
-  
+
 footer {
     position: fixed;
     width: 100%;
@@ -98,10 +98,10 @@ footer {
     background-color: var(--color3);
     box-shadow: var(--shadow);
 }
-  
-  @keyframes pulse {
+
+@keyframes pulse {
     20% {
-      transform: rotate3d(-10, -10, -10, 50deg) scale(1.2);
+    transform: rotate3d(-10, -10, -10, 50deg) scale(1.2);
     }
 
     40% {
@@ -110,10 +110,23 @@ footer {
 
     60% {
         transform: rotate3d(-10, 10, 10, 50deg) scale(1.2);
-      }
+    }
 
     80% {
         transform: rotate3d(10, 10, 10, 50deg) scale(1);
     }
 
-  }
+}
+
+.poke-buttons { 
+    display: flex;
+    flex-direction: column;
+}
+
+.poke-img { 
+   height: 100px;
+   display: flex;
+   flex-direction: column;
+   text-align: center;
+}
+
